src/objects/EEC_HistoricalVisitStaging__c.object
<CustomObject>
    <description>Staging object used to load historic Visit Data into target object &apos;visits&apos;</description>
    <fields>
        <fullName>EEC_CaseLoadLicensorId__c</fullName>
        <label>CaseLoadLicensorId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EEC_ComplianceCodeDesc__c</fullName>
        <label>ComplianceCodeDesc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_ComplianceCodeId__c</fullName>
        <label>ComplianceCodeId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EEC_DuplicateRule1__c</fullName>
        <description>Duplicate Algorithm Rule 1 = Visit Date + ProgramId + VisitTypeDescription</description>
        <formula>TEXT(EEC_VisitDate__c) + &apos;|&apos; +  EEC_ProgramId__c + &apos;|&apos; + EEC_VisitTypeDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DuplicateRule1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_ErrorText__c</fullName>
        <description>Holds the exception</description>
        <label>ErrorText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EEC_FCC_Mobile_Visit__c</fullName>
        <formula>EEC_VisitId__c + &apos;|&apos; +  EEC_Hostname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCC Mobile Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Hostname__c</fullName>
        <description>Field used in FCC Mobile Data Extract</description>
        <label>Hostname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_LeadReasonOfVisit__c</fullName>
        <label>LeadReasonOfVisit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_New_Hostname__c</fullName>
        <description>Field used in FCC Mobile Data Extract</description>
        <label>New Hostname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_ProgramId__c</fullName>
        <label>ProgramId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitDate__c</fullName>
        <label>VisitDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EEC_VisitId__c</fullName>
        <label>VisitId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitTypeCreateByUserId__c</fullName>
        <label>VisitTypeCreateByUserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitTypeCreateDate__c</fullName>
        <label>VisitTypeCreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EEC_VisitTypeDescription__c</fullName>
        <label>VisitTypeDescription</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Visit_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EEC_VisitingLicensorId1__c</fullName>
        <label>VisitingLicensorId1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitingLicensorId2__c</fullName>
        <label>VisitingLicensorId2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitingLicensorId3__c</fullName>
        <label>VisitingLicensorId3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>HistoricalVisitStaging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EEC_LeadReasonOfVisit__c</columns>
        <columns>EEC_ComplianceCodeDesc__c</columns>
        <columns>EEC_VisitDate__c</columns>
        <columns>EEC_Visit_Processed__c</columns>
        <columns>EEC_ProgramId__c</columns>
        <columns>EEC_ErrorText__c</columns>
        <columns>EEC_DuplicateRule1__c</columns>
        <columns>EEC_FCC_Mobile_Visit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LV-{0000}</displayFormat>
        <label>VisitStagingId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HistoricalVisitStaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>